--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} cassidoo. <a href="https://github.com/cassidoo/blahg">This blog is open source</a>! <3
+	&copy; {today.getFullYear()} Víctor González. Based on <a href="https://github.com/cassidoo/blahg">Cassidy's blog template</a>
 </footer>
 <style>
 	footer {
