ingles esta passe, espaniol

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Víctor González. Based on <a href="https://github.com/cassidoo/blahg">Cassidy's blog template</a>
+	&copy; {today.getFullYear()} Víctor González. Basado en la <a href="https://github.com/cassidoo/blahg">plantilla de blog de Cassidy</a>
 </footer>
 <style>
 	footer {
