--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,14 +7,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 	<div class="header-section">
 		<div class="header-frame">
 			<h1>{SITE_TITLE}</h1>
-			<h2>{SITE_DESCRIPTION}</h2>
+			<h3>{SITE_DESCRIPTION}</h3>
 		</div>
 	</div>
 </header>
 <nav>
-	<HeaderLink href="/">home</HeaderLink>
-	<HeaderLink href="/posts">posts</HeaderLink>
-	<HeaderLink href="https://cassidoo.co/newsletter">etc</HeaderLink>
+	<HeaderLink href="/">inicio</HeaderLink>
+	<HeaderLink href="/posts">artículos</HeaderLink>
+	<!-- <HeaderLink href="https://cassidoo.co/newsletter">más</HeaderLink> -->
 </nav>
 <style>
 	h2 {
