--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,12 +13,12 @@ const tags = getTags(posts);
 ---
 
 <!doctype html>
-<html lang="en-us">
+<html lang="es">
 	<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			404: Page not found
+			404: Página no encontrada
 
 			<Tags tags={tags} all />
 		</main>
