--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -18,7 +18,7 @@ posts = posts.sort(
 ---
 
 <!doctype html>
-<html lang="en-us">
+<html lang="es">
 	<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	<body>
 		<Header />
@@ -36,11 +36,11 @@ posts = posts.sort(
 				</ul>
 			</content>
 
-			<p class="center">
-				You can also <a href="https://blahg.netlify.app/rss.xml">
-					subscribe with RSS!
+			<!-- <p class="center">
+				También puedes <a href="https://www.victtor.com/rss.xml">
+					suscribirte con RSS!
 				</a>
-			</p>
+			</p> -->
 		</main>
 		<Footer />
 		<ColorScript />
