--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -2,7 +2,7 @@
 const { tags, all } = Astro.props;
 ---
 
-{all && <h3 class="tag-title">View posts by tag</h3>}
+{all && <h4 class="tag-title">Ver publicaciones por etiqueta</h4>}
 <div class=`${all && "tags"}`>
 	{
 		tags &&
