--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -40,13 +40,13 @@ let sortedPosts = tag.sort(
 ---
 
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="es">
 	<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	<body>
 		<Header />
 		<main>
 			<content>
-				<h3>Posts tagged with "{currentTag}"</h3>
+				<h3>Artículos etiquetados con "{currentTag}"</h3>
 				<ul class="tags-list">
 					{
 						sortedPosts.map(
